--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,8 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
+// Supports weights 400-900
+import '@fontsource-variable/playfair-display';
 
 interface Props {
 	title: string;
