--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,7 +58,7 @@ h6 {
   margin: 0 0 0.5rem 0;
   color: rgb(var(--black));
   line-height: 1.2;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Playfair Display Variable', Times, serif;
 }
 h1 {
   font-size: 3.052em;
